--- a/crop-recommendation-website/public/index.html
+++ b/crop-recommendation-website/public/index.html
@@ -210,7 +210,7 @@
                                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
                                         Can I Plant ?
                                     </h3>
-                                    <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="defaultModal">
+                                    <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="defaultModal" onclick="closeModal()">
                                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
                                         </svg>
@@ -223,7 +223,7 @@
                                 </div>
                                 <!-- Modal footer -->
                                 <div class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
-                                    <button data-modal-hide="defaultModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Okay</button>              
+                                    <button data-modal-hide="defaultModal" onclick="closeModal()" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Okay</button>              
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,19 @@
         const districtSelect = document.getElementById("districtSelect");
         const cropSelect = document.getElementById("cropSelect");
         const canIPlant=document.getElementById("caniplant");
-        const modal=document.getElementById("defaultModal");
+        const defaultModalElement=document.getElementById("defaultModal");
+		
+		const modalOptions = {
+			placement: 'center',
+			backdrop: 'dynamic',
+			closable: true,
+		};
+		const modal = new Modal(defaultModalElement, modalOptions);
+		
+		function closeModal() {
+			modal.hide()
+			document.querySelector("body > div[modal-backdrop]")?.remove()
+		}
 
         async function getDistricts() {
             const response = await fetch("/api/data/districts");
@@ -318,17 +330,11 @@
             }
 
             // set the modal menu element
-            const $targetEl = document.getElementById('defaultModal');
+            // const $targetEl = document.getElementById('defaultModal');
 
-            // options with default values
-            const options = {
-                placement: 'center',
-                backdrop: 'dynamic',
-                closable: true,
-            };
-
-            const modal = new Modal($targetEl);
-            modal.toggle();
+            // const modal = new Modal($targetEl);
+            // modal.toggle();
+			modal.show();
         })
     </script>
     <script src="./scripts/notification.js"></script>
